--- a/vertebral.ipynb
+++ b/vertebral.ipynb
@@ -48,7 +48,7 @@
     "            \"degree_spondylolisthesis\",\n",
     "            \"class\"\n",
     "            ]\n",
-    "wine_df = pd.read_csv(\"./datasets/vertebral+column/column_3C.dat\", names=colnames, sep=\" \")          # {Hernia, Spondylolisthesis, Normal}"
+    "vertebral_df = pd.read_csv(\"./datasets/vertebral+column/column_3C.dat\", names=colnames, sep=\" \")          # {Hernia, Spondylolisthesis, Normal}"
    ]
   },
   {
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "wine_df.head()"
+    "vertebral_df.head()"
    ]
   },
   {
@@ -203,7 +203,7 @@
     }
    ],
    "source": [
-    "wine_df.info()"
+    "vertebral_df.info()"
    ]
   },
   {
@@ -229,12 +229,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = wine_df.drop(columns=[\"class\",\n",
+    "X = vertebral_df.drop(columns=[\"class\",\n",
     "            \"lumbar_lordosis_angle\",\n",
     "                         \"lumbar_lordosis_angle\", \n",
     "            \"sacral_slope\", \n",
     "            \"degree_spondylolisthesis\",])\n",
-    "y = wine_df[\"class\"]"
+    "y = vertebral_df[\"class\"]"
    ]
   },
   {
